# opentelemetry-cpp-tutorial

./: README.md  config.yaml  docker-compose.yml
common/: tracer.hpp
service-a/: .gdbinit  CMakeLists.txt  Dockerfile  conanfile.txt  launch.json  main.cpp  service.hpp
service-a/common/: tracer.hpp
service-b/: CMakeLists.txt  Dockerfile  conanfile.txt  launch.json  main.cpp  service.hpp
service-b/common/: tracer.hpp
